# VDSProject_Group_4

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  testfile
.github/workflows/: cmake-single-platform.yml  doxygen-pages.yml
src/: Manager.cpp  Manager.h
src/bench/: CMakeLists.txt
src/test/: CMakeLists.txt  Tests.h  main_test.cpp  manager_test.cpp
src/verify/: CMakeLists.txt  main_verify_all.cpp
